--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^18",
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.3",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "swiper": "^10.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^10",
